# omega_analysis

./: README  average_kinematics.f  bg_background_test.C  calc_xsect.f  diamond.C  eps_n_theta.f  fitting_functions.C  get_u_phi_bin.C  lt_2D_fit.C  plot_R.C  recon_kin.C  t_phi.C  u_phi_fit_functions.C  wt_test.C  x_fit_in_t.C
root_ana/: .root_anna_pl.cpp.swp  .root_anna_pl.cpp_old_12_May_2015.swp  .root_anna_pl.h.swp  .sconsign.dblite  CMakeLists.txt  SConstruct  analysis.cpp  analysis.cpp_bak_27_May_15  analysis.cpp_broken  analysis.cpp_fp2_bak_17_June_15  analysis.h  analysis_heep.cpp  analysis_heep.cpp_bak_24_June_2015  analysis_heep.h  analysis_heep_single.cpp  analysis_heep_single.cpp_broken_08_Sep_2015  analysis_heep_single.cpp_good  analysis_heep_single.h  analysis_omega.cpp  analysis_omega.cpp_3_u_8_phi_org_21_Feb_2017  analysis_omega.cpp_bak  analysis_omega.cpp_broken  analysis_omega.cpp_working  analysis_omega.h  cut.cpp  cut.cpp_fpi  cut.cpp_fpi2_25_June_2015  cut.h  general_utility.cpp  general_utility.h  makefile  nohup.out  print_data.cpp  print_data.h  read_setting.cpp  read_setting.h  root_ana_heep  root_ana_heep.cpp  root_ana_heep.h  root_ana_heep_single  (+22 more)
